# ariel-zoo

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  reproduce_issue.py  search.html  searchindex.js  similarity.ipynb  test.py  test_frame_new.py
.doctrees/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/source/: GUI.doctree  ec_course_docs.doctree  installation_guide.doctree  myst_ref.doctree
.typings/mujoco/: _enums.pyi  _functions.pyi  _render.pyi  _rollout.pyi  _simulate.pyi  _specs.pyi  _structs.pyi  bindings_test.pyi  renderer.pyi  rollout.pyi  specs_test.pyi  viewer.pyi
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/ariel/: index.html
docs/: conf.py  index.md
examples/: 0_mujoco_launcher.py  0_render_single_frame.py  1_video_recorder.py  A2_template.py  A2_template_cpg.py  A3_template.py  A3_template_jack.py
examples/A3_template/: robot_graph.json
examples/a_mujoco/: 0_mujoco_launcher.py  1_render_single_frame.py
examples/b_robots/: _graph_to_robot.py  _robogen_build.py  _track_path.py
examples/z_ec_course/: A2_template.py  A2_template_cpg.py  A3_Competition_tester.py  A3_competition_tester.py  A3_plot_function.py  A3_template.py  A3_template_jack.py
experiments/: graph.html  random_population_test.ipynb
source/: GUI.html  ec_course_docs.html  installation_guide.html  myst_ref.html
source/Db_examples/: db_with_pandas.html  db_with_polars.html  db_with_sqlite3.html  index.html
source/Mujoco_docs/: mujoco_docs.html
source/_extra/: admonitions.html  ariel_ideas.html  config_steps.html
source/contributing_guide/: index.html
source/ea_intro/: ea_example.html
source/introduction_to_modular_robots/: index.html
src/ariel/: __init__.py
src/canonical_toolkit/: __init__.py  todo
tests/: random_population_test.ipynb
tests/functional/: __init__.py  ariel_modules.ipynb  cpg.ipynb  decoders.ipynb  external_libs.ipynb  mujoco_spawn.ipynb  nde.ipynb  sim_environments.ipynb  speed_tests.ipynb  utils.ipynb
tests/unit/: __init__.py
zoo/: TODO  diversity_EA.ipynb  python.py  random_initialization.ipynb  similarity.ipynb  tfidf_usage.py  todo
zoo/EA_robot1/: diversity_EA.ipynb  learnable.py
zoo/EA_v1/: ctk_tutorial.ipynb  diversity_EA_temp.ipynb  manual_robot_selection.csv
zoo/data/: robot_data_900.csv  sorted_population.csv
zoo/depricated/: BENCHMARK_RESULTS.md  BashOutput  README.md  benchmark_realistic_robots.py  benchmark_torch_tools.py  conftest.py  hybrid_pipeline_example.py  run_analyser_a.ipynb  test_torch_hasher.py  test_torch_matrix.py
zoo/ea/: config.py  db_with_polars.ipynb  run.py  run_analyser.ipynb  run_history.csv  snellius.sh
zoo/ea_runner/: config.py  run.py  run_analyser.ipynb  run_history.csv  single_run.ipynb  snellius.sh
zoo/first_run/: 1v1_compare.ipynb  batch_training.py  diversity_EA.ipynb  fitness_fnc.py  fuda_EA.py  generations_umap.ipynb  learnable.py
zoo/fuda/: all_fuda.csv  hand_picked.csv  hand_picked_robots.ipynb  parameters.txt
zoo/old/: old_initial_population.ipynb
(+488 files in other folders)
